# connectors

./: .bumpversion.cfg  .gitignore  .variables  README.md  helper.sh  requirements.txt  setup.cfg
.github/workflows/: release.yml
src/tgedr/connectors/: azure_ad.py  azure_table_storage.py  common.py  ftp.py  monetate.py  monetate_api.py
test/: test_azure_ad.py  test_azure_table_storage.py  test_monetate.py
