[metadata]
name = tgedr-connectors
version = 0.0.0
author = joao tiago viegas
author_email = jtviegas.js@gmail.com
url = https://github.com/tgedr/connectors
description = This package provides a set of wrappers to specific connectors, be it db's, api's, etc...
long_description = file: README.md
long_description_content_type = text/markdown
license = Unlicense
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
package_dir =
    =src
packages=find_namespace:
install_requires =
    pytest
[options.packages.find]
where=src
