[metadata]
name = tgedr-connectors
version = 0.0.5
author = joao tiago viegas
author_email = jtviegas.js@gmail.com
url = https://github.com/tgedr/connectors
description = This package provides a set of wrappers to specific connectors, be it db's, api's, etc...
long_description = file: README.md
long_description_content_type = text/markdown
license = Unlicense
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
package_dir =
    =src
packages=find_namespace:
install_requires =
    PyJWT==2.3.0
    pytest==7.0.1
    requests>=2.26.0
    astroid==2.9.3
    pycodestyle==2.8.0
    pyflakes==2.4.0
    typed-ast==1.5.2
    wrapt==1.13.3
    paramiko==2.9.2
[options.packages.find]
where=src
